poke/testsuite/poke.pkl/map-diag-3.pk
/* { dg-do compile } */

void @ 0#B; /* { dg-error "" } */
